@@ -219,7 +219,7 @@ static int	delete_history(const char *table, zbx_uint64_t itemid, int keep_histo
 	const char	*__function_name = "delete_history";
 	DB_RESULT       result;
 	DB_ROW          row;
-	int             min_clock, deleted;
+	int             min_clock, keep_from, deleted = 0;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() table:'%s' itemid:" ZBX_FS_UI64 " keep_history:%d now:%d",
 		__function_name, table, itemid, keep_history, now);
@@ -227,16 +227,17 @@ static int	delete_history(const char *table, zbx_uint64_t itemid, int keep_histo
 	result = DBselect("select min(clock) from %s where itemid=" ZBX_FS_UI64, table, itemid);
 
 	if (NULL == (row = DBfetch(result)) || SUCCEED == DBis_null(row[0]))
-	{
-		DBfree_result(result);
-		return 0;
-	}
+		goto clean;
 
-	min_clock = atoi(row[0]);
-	min_clock = MIN(now - keep_history * SEC_PER_DAY, min_clock + 4 * CONFIG_HOUSEKEEPING_FREQUENCY * SEC_PER_HOUR);
-	DBfree_result(result);
+	keep_from = now - keep_history * SEC_PER_DAY;
+	if (keep_from <= (min_clock = atoi(row[0])))
+		goto clean;
+
+	min_clock = MIN(keep_from, min_clock + 4 * CONFIG_HOUSEKEEPING_FREQUENCY * SEC_PER_HOUR);
 
 	deleted = DBexecute("delete from %s where itemid=" ZBX_FS_UI64 " and clock<%d", table, itemid, min_clock);
+clean:
+	DBfree_result(result);
 
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():%d", __function_name, deleted);
 
